Mass problem fix for Discord Bot and GAPI handler